# web3-account

./: .env.example  .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  demo.54bbffb4.js  demo.54bbffb4.js.map  demo.c51e68aa.js  demo.c51e68aa.js.map  demo.html  index.9a5e88de.js  index.9c69b36f.js  index.9c69b36f.js.map  index.cd700a74.js  index.cd700a74.js.map  index.html  pyproject.toml  run_eip712_tests.py
adapter/: api.py  deserialize.py  eip712.py  eip712_test.py  eth_account.py  eth_account_abi.py  settings.py
client/: app.tsx  demo.html  erc20_demo.tsx  generateHashes.ts  hooks.ts  lib.ts  old_demo.html  package.json  typedData.ts  utils.ts  web3_account.json
contracts/: ETH_Account.cairo  demo_token.cairo  eip712.cairo  eip712.py  interactive.py  keccak256.cairo  keccak256_test.py  keccak_test.py  proxy.cairo  recover.cairo  recover_test.py  run_keccak.py  setup.py  test.py  test_contract.cairo  test_utils.py  upgrades.cairo  web3_account.cairo  web3_account_test.py
contracts/account/: eip712.cairo  proxy.cairo  web3_account.cairo
contracts/keccak/: contract.cairo  keccak.cairo  keccak_utils.py  run.py
contracts/secp/: run.py  secp.cairo  secp_contract.cairo  secp_ec.cairo  secp_field.cairo
contracts/token/: ERC20.cairo  ERC20_base.cairo
eip712-starknet-account/: .eslintrc.json  LICENSE  README.md  package.json  tsconfig.json
eip712-starknet-account/src/: config.ts  index.ts  typedData.ts  types.ts  utils.ts  web3_account.json  web3_account_proxy.json
eip712-starknet-account/src/account/: index.ts
eip712-starknet-account/src/account-provider/: index.ts
eip712-starknet-account/src/adapter/: index.ts
eip712-starknet-account/src/signer/: index.ts
eip712-starknet-account/tests/e2e/: .eslintrc.js  synpress.json
eip712-starknet-account/tests/e2e/specs/: sample-spec.js
server/: __main__.py
server/app/: __init__.py  api.py  deserialize.py  deserialize_test.py  eip712.py  eip712_test.py  erc20.py  erc_20_abi.py  eth_account.py  eth_account_abi.py  settings.py  starknet.py
starknet-web3-account/: .eslintrc.json  package.json  tsconfig.json
starknet-web3-account/src/: config.ts  index.ts  typedData.ts  types.ts  utils.ts  web3_account_proxy.json
starknet-web3-account/src/account/: index.ts
starknet-web3-account/src/adapter/: index.ts
starknet-web3-account/src/client/: index.ts
starknet-web3-account/src/signer/: index.ts
