[tool.poetry]
name = "starknet-web3-rpc-adapter"
version = "0.1.0"
description = "Adapter application for consuming web3 messages from ie. wallets, and passing them on to starknet"
authors = ["tomasz.rejowski <tomasz.rejowski@swmansion.com>", "Jakub Ptak <jakub.ptak@swmansion.com>"]
readme = "README.md"
repository = "https://github.com/software-mansion-labs/starknet-web3-rpc-adapter"
license = "MIT"

[tool.black]
include = """
adapter
"""

[tool.poetry.dependencies]
python = ">=3.7.12, <3.10"
uvicorn = "^0.16.0"
jsonrpcserver = "^5.0.5"
fastapi = "^0.71.0"
eip712-structs = "^1.1.0"
pytest = "^6.2.5"
eth-abi = "^2.1.1"
cairo-lang = "0.7.0"
"starknet.py" = "^0.1.6-alpha.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.0"
pylint = "^2.12.2"
black = "^21.12b0"
starknet-devnet = "^0.1.12"

[tool.poe.tasks]
devclient = "yarn --cwd client dev"
devdemo = "yarn --cwd client devdemo"
devserver = "uvicorn adapter.api:app --reload --ssl-keyfile=./key.pem --ssl-certfile=./cert.pem --log-level=debug"
devserver_http = "uvicorn adapter.api:app --reload --log-level=debug"
lint = "pylint adapter"
format = "black ."
test = "pytest adapter"
test_contracts = {shell = "PYTHONPATH=$PWD pytest -s contracts/*_test.py"}
[tool.poe.tasks.devnet]
shell = """
    trap "exit" INT TERM
    trap "kill 0" EXIT
    starknet-devnet --host localhost --port 5001 --host 0.0.0.0 &
    DEVNET_PID=$!
    sleep 1
    CAIRO_PATH="./contracts/keccak-cairo/keccak:./contracts/cairo-contracts/" python contracts/setup.py $eth_address
    wait $DEVNET_PID
"""
args = [
    { name = "eth_address", required = true },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
