[tool.poetry]
name = "starknet-web3-rpc-adapter"
version = "0.1.0"
description = "Adapter application for consuming web3 messages from ie. wallets, and passing them on to starknet"
authors = ["tomasz.rejowski <tomasz.rejowski@swmansion.com>", "Jakub Ptak <jakub.ptak@swmansion.com>"]
readme = "README.md"
repository = "https://github.com/software-mansion-labs/starknet-web3-rpc-adapter"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.12, <3.10"
uvicorn = "^0.16.0"
jsonrpcserver = "^5.0.5"
fastapi = "^0.71.0"
eip712-structs = "^1.1.0"
pytest = "^6.2.5"
eth-abi = "^2.1.1"
"starknet.py" = "^0.2.4-alpha.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.12.0"
pylint = "^2.12.2"
black = "^21.12b0"
starknet-devnet = "^0.2.1"

[tool.poe.tasks]
devclient = "yarn --cwd client dev"
test = {shell = "PYTHONPATH=$PWD pytest -s contracts/*_test.py"}
[tool.poe.tasks.reload_module] 
shell = """
    yarn --cwd starknet-web3-account build && yarn --cwd client upgrade starknet-web3-account
"""
[tool.poe.tasks.devnet]
shell = """
    trap "exit" INT TERM
    trap "kill 0" EXIT
    starknet-devnet --host localhost --port 5001 --host 0.0.0.0 &
    DEVNET_PID=$!
    sleep 1
    CAIRO_PATH="./contracts/cairo-contracts/src" python contracts/setup.py devnet
    wait $DEVNET_PID
"""
[tool.poe.tasks.deploy_testnet]
shell = """
    CAIRO_PATH="./contracts/cairo-contracts/src" python contracts/setup.py testnet
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
